--- a/src/App.css
+++ b/src/App.css
@@ -21,19 +21,29 @@
   color: #09d3ac;
 }
 
-@keyframes cf3FadeInOut {
+@keyframes fadeInOut {
   0% {
   opacity:0;
 }
-30% {
+16% {
   opacity: 1;
 }
 
-90% {
+84% {
 opacity:1;
 }
 100% {
 opacity:0;
+}
+
+}
+
+@keyframes fadeIn {
+  0% {
+  opacity:0;
+}
+100% {
+opacity:1;
 }
 
 }
