--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
+::-webkit-scrollbar {
+  display: none;
+}
+
 #root {
   height: 100vh;
-  /* overflow: hidden; */
+  overflow: hidden;
+  text-align: center;
 }
 
 .App {
-  text-align: center;
+
 }
 
 .App-link {
