--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,28 @@
   text-align: center;
 }
 
-.App {
+.fade-enter {
+  height: 0px;
+  opacity: 0;
+}
+.fade-enter.fade-enter-active {
+  height: 100vh;
+  opacity: 1;
+  transition: height 500ms ease-in, opacity 500ms ease-in;
+}
+.fade-exit {
+  height: 100vh;
+  opacity: 1;
+}
 
+.fade-exit.fade-exit-active {
+  height: 0px;
+  opacity: 0;
+  transition:  height 500ms ease-in, opacity 500ms ease-in;
+}
+
+.fade-enter-done{
+  height: 100vh;
 }
 
 .App-link {
@@ -49,6 +69,30 @@
   }
   100% {
     opacity:1;
+  }
+}
+
+
+@keyframes productListFullToSide {
+  0% {
+    width: 100%;
+  }
+  25%{
+    opacity: 0;
+    width: 100%;
+  }
+  50%{
+    opacity: 0;
+    width: 0%;
+  }
+  75%{
+    opacity: 1;
+    height: 100vh;
+    width: 0%;
+  }
+  100% {
+    width: 25%;
+    height:100vh;
   }
 }
 
